<resources>
    <string name="app_name">Liaisons Home</string>
    <string name="title_activity_my_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_login">Login</string>

    <string name="navigation_talks">Talks</string>
    <string name="navigation_contacts">Contacts</string>
    <string name="navigation_discover">Discover</string>
    <string name="navigation_me">Me</string>

    <string name="register_title">Sign up by Email address</string>
    <string name="register_email">Email</string>
    <string name="register_email_hint">jack@abc.com</string>
    <string name="register_password1">Password</string>
    <string name="register_password1_hint">Enter Password</string>
    <string name="register_password2">Confirm</string>
    <string name="register_password2_hint">Confirm Password</string>
    <string name="register_sign_up">Sign Up</string>

    <string name="login_title">Login via Email address</string>
    <string name="login_account">Account</string>
    <string name="login_button_text">Login</string>
    <string name="login_button_text2">Sign In</string>
    <string name="login_to_register"><u>no account?</u></string>

    <string name="me_identity_tile">My identity</string>
    <string name="me_identity_date">Used since</string>
    <string name="me_privacy_text">Privacy</string>
    <string name="me_privacy_choice_public">Public</string>
    <string name="me_privacy_choice_private">Private</string>
    <string name="me_privacy_choice_forbidden">Forbidden</string>
    <string name="me_settings_text">Settings</string>

    <string name="discover_footer_loading">Loading...</string>
    <string name="discover_footer_no_more">No more</string>
    <string name="discover_footer_network_failed">Network failed</string>

    <string name="contacts_public">Public</string>
    <string name="contacts_private">Private</string>
    <string name="contacts_i_found_him">I found him/her</string>
    <string name="contacts_he_found_me">He/She found me</string>

    <string name="talks_format_date_no_year">d/M</string>

</resources>
