<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/navigation_height"
        android:paddingTop="@dimen/actionbar_height">
    </FrameLayout>

    <LinearLayout
        android:id="@+id/main_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:background="@color/colorActionBar"
        android:orientation="horizontal"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="18dp"
            android:text="@string/app_name"
            android:textColor="@color/colorActionBarText"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:src="@color/colorNavigationIconNormal"
        app:layout_constraintBottom_toTopOf="@+id/main_navigation"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent" />

    <android.support.v7.widget.GridLayout
        android:id="@+id/main_navigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/navigation_height"
        android:background="@color/colorNavigationBar"
        app:columnCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:rowCount="1">

        <com.hhwit.liaisonshome.NavigationIconView
            android:id="@+id/navigationIconView"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="4dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:liaisonsColor1="@color/colorNavigationIconNormal"
            app:liaisonsColor2="@color/colorNavigationIconPress"
            app:liaisonsDimension="14sp"
            app:liaisonsDrawable1="@drawable/ic_discover_blank_24dp"
            app:liaisonsDrawable2="@drawable/ic_discover_blank_24dp"
            app:liaisonsString="@string/navigation_discover" />

        <com.hhwit.liaisonshome.NavigationIconView
            android:id="@+id/navigationIconView1"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="4dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:liaisonsColor1="@color/colorNavigationIconNormal"
            app:liaisonsColor2="@color/colorNavigationIconPress"
            app:liaisonsDimension="14sp"
            app:liaisonsDrawable1="@drawable/ic_contacts_blank_24dp"
            app:liaisonsDrawable2="@drawable/ic_contacts_full_24dp"
            app:liaisonsString="@string/navigation_contacts" />

        <com.hhwit.liaisonshome.NavigationIconView
            android:id="@+id/navigationIconView2"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="5dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:liaisonsColor1="@color/colorNavigationIconNormal"
            app:liaisonsColor2="@color/colorNavigationIconPress"
            app:liaisonsDimension="14sp"
            app:liaisonsDrawable1="@drawable/ic_talks_blank_24dp"
            app:liaisonsDrawable2="@drawable/ic_talks_full_24dp"
            app:liaisonsString="@string/navigation_talks" />

        <com.hhwit.liaisonshome.NavigationIconView
            android:id="@+id/navigationIconView3"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="4dp"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:liaisonsColor1="@color/colorNavigationIconNormal"
            app:liaisonsColor2="@color/colorNavigationIconPress"
            app:liaisonsDimension="14sp"
            app:liaisonsDrawable1="@drawable/ic_me_blank_24dp"
            app:liaisonsDrawable2="@drawable/ic_me_full_24dp"
            app:liaisonsString="@string/navigation_me" />
    </android.support.v7.widget.GridLayout>

</android.support.constraint.ConstraintLayout>