<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/register_top"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <com.hhwit.liaisonshome.MyButtonView
            android:id="@+id/register_close_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            app:buttonContentNormal="@android:color/black"
            app:buttonContentPressed="@color/colorPrimaryDark"
            app:buttonImage="@drawable/ic_close_black_24dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="50dp"
                    android:text="@string/login_title"
                    android:textColor="@color/colorActionBar"
                    android:textSize="25sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/email_text"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/login_account"
                        android:textColor="@color/colorActionBar"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/register_email_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/email_text"
                        android:background="@null"
                        android:ems="9"
                        android:hint="@string/register_email_hint"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorActionBar" />

                    <com.hhwit.liaisonshome.MyButtonView
                        android:id="@+id/register_email_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        app:buttonContentDisabled="@color/colorPrimary"
                        app:buttonContentNormal="@color/colorNavigationIconNormal"
                        app:buttonContentPressed="@color/colorNavigationIconNormal"
                        app:buttonImage="@drawable/ic_close_gray1_24dp" />

                </RelativeLayout>

                <com.hhwit.liaisonshome.MyButtonView
                    android:id="@+id/register_email_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    app:buttonBackgroundDisabled="@color/colorNavigationIconNormal"
                    app:buttonBackgroundNormal="@color/colorButtonNormal"
                    app:buttonBackgroundPressed="@color/colorButtonNormal" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/password1_text"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/register_password1"
                        android:textColor="@color/colorActionBar"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/register_password1_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/password1_text"
                        android:background="@null"
                        android:ems="9"
                        android:hint="@string/register_password1_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/colorActionBar" />

                    <com.hhwit.liaisonshome.MyButtonView
                        android:id="@+id/register_password1_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        app:buttonContentDisabled="@color/colorPrimary"
                        app:buttonContentNormal="@color/colorNavigationIconNormal"
                        app:buttonContentPressed="@color/colorNavigationIconNormal"
                        app:buttonImage="@drawable/ic_close_gray2_24dp" />

                </RelativeLayout>

                <com.hhwit.liaisonshome.MyButtonView
                    android:id="@+id/register_password1_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    app:buttonBackgroundDisabled="@color/colorNavigationIconNormal"
                    app:buttonBackgroundNormal="@color/colorButtonNormal"
                    app:buttonBackgroundPressed="@color/colorButtonNormal" />

            </LinearLayout>

            <com.hhwit.liaisonshome.MyButtonView
                android:id="@+id/register_sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                app:buttonBackgroundDisabled="@color/colorButtonDisable"
                app:buttonBackgroundNormal="@color/colorButtonNormal"
                app:buttonBackgroundPressed="@color/colorButtonPress"
                app:buttonContentDisabled="@color/colorPrimary"
                app:buttonContentNormal="@color/colorPrimary"
                app:buttonContentPressed="@android:color/darker_gray"
                app:buttonText="@string/login_button_text"
                app:buttonTextSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/login_to_register"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_alignParentRight="true"
                    android:focusable="true"
                    android:clickable="true"
                    android:text="@string/login_to_register"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp" />
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>