<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/register_top"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <com.hhwit.liaisonshome.MyButtonView
            android:id="@+id/close_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            app:buttonColor1="@color/colorPrimary"
            app:buttonColor2="@color/colorNavigationIconNormal"
            app:buttonDrawable="@drawable/ic_close_black_24dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="40dp"
                    android:paddingTop="30dp"
                    android:text="@string/register_title"
                    android:textColor="@color/colorActionBar"
                    android:textSize="25sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/email_text"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/register_email"
                        android:textColor="@color/colorActionBar"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/email_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/email_text"
                        android:background="@null"
                        android:ems="11"
                        android:hint="@string/register_email_hint"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/colorActionBar" />

                    <com.hhwit.liaisonshome.MyButtonView
                        android:id="@+id/email_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        app:buttonColor1="@color/colorPrimary"
                        app:buttonColor2="@color/colorNavigationIconNormal"
                        app:buttonDrawable="@drawable/ic_close_black_24dp" />

                </RelativeLayout>

                <View
                    android:id="@+id/email_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimaryDark"></View>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/password1_text"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/register_password1"
                        android:textColor="@color/colorActionBar"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/password1_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/password1_text"
                        android:background="@null"
                        android:ems="11"
                        android:hint="@string/register_password1_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/colorActionBar" />

                    <com.hhwit.liaisonshome.MyButtonView
                        android:id="@+id/password1_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        app:buttonColor1="@color/colorPrimary"
                        app:buttonColor2="@color/colorNavigationIconNormal"
                        app:buttonDrawable="@drawable/ic_close_black_24dp" />

                </RelativeLayout>

                <View
                    android:id="@+id/password1_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimaryDark"></View>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/password2_text"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/register_password2"
                        android:textColor="@color/colorActionBar"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/password2_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/password2_text"
                        android:background="@null"
                        android:ems="11"
                        android:hint="@string/register_password2_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/colorActionBar" />

                    <com.hhwit.liaisonshome.MyButtonView
                        android:id="@+id/password2_button"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentRight="true"
                        app:buttonColor1="@color/colorPrimary"
                        app:buttonColor2="@color/colorNavigationIconNormal"
                        app:buttonDrawable="@drawable/ic_close_black_24dp" />

                </RelativeLayout>

                <View
                    android:id="@+id/password2_line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimaryDark"></View>
            </LinearLayout>

            <Button
                android:id="@+id/signup_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/register_signup"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>